Automatic commit from ReadMe